# solana-game-nft-marketplace

./: .dockerignore  .gitignore  README.md  package-lock.json  package.json
.next/: trace
anchor/: .env.example  Anchor.toml  README.md  codama.js  daigram.html  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
anchor/programs/: output.json
anchor/programs/game_registry/: Cargo.toml
anchor/programs/game_registry/src/: lib.rs
anchor/scripts/: test-load-devnet.sh  test-load-local.sh
anchor/src/: index.ts  nftmarketplacedapp-exports.ts
anchor/tests/: game-registry.test.ts  load-burst.test.ts  marketplace-gas-metaplex-sdk.test.ts  marketplace-gas.test.ts  marketplace-refund-cost.test.ts  nftmarketplacedapp.test.ts  sol-tx-rent.ts
anchor/wallet/: deployment_wallet  pubkey.txt
auction-house-sdk/: jest.config.ts  package-lock.json  package.json  tsconfig.json
auction-house-sdk/src/: auction-house.ts  index.ts
auction-house-sdk/test/: auction-house.test.ts  index.spec.old
docs/: game-registration.mermaid  token-mint-common.mermaid  token-mint-eth.mermaid  token-mint-sol.mermaid
eth-project/: .env.example  README.md  hardhat.config.ts  package.json  pnpm-lock.yaml
game-casino/: package-lock.json  package.json
platform-frontend/: .dockerignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
platform-frontend-eth/: .gitignore  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml
sample-game-eth/: README.md  package.json  pnpm-lock.yaml
sample-game-sol/: README.md  package.json  pnpm-lock.yaml
(+157 files in other folders)
